force-app/main/default/objects/Feature_Forecast__c/Feature_Forecast__c.object-meta.xml
<CustomObject>
    <label>Feature Forecast</label>
    <nameField>
        <displayFormat>FF-{000000}</displayFormat>
        <label>Feature Forecast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>