force-app/main/default/objects/Feature_Forecast__c/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <inlineHelpText>Date that the feature was actually completed</inlineHelpText>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>