force-app/main/default/objects/Feature_Forecast__c/fields/Actual_High_Throughput__c.field-meta.xml
<CustomField>
    <fullName>Actual_High_Throughput__c</fullName>
    <inlineHelpText>Highest sprint throughput for this feature</inlineHelpText>
    <label>Actual HighThroughput</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>