force-app/main/default/objects/Feature_Forecast__c/fields/Actual_Low_Throughput__c.field-meta.xml
<CustomField>
    <fullName>Actual_Low_Throughput__c</fullName>
    <inlineHelpText>Lowest actual sprint throughput for the feature</inlineHelpText>
    <label>Actual Low Throughput</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>