force-app/main/default/objects/Feature_Forecast__c/fields/Actual_Starting_Number_of_Stories__c.field-meta.xml
<CustomField>
    <fullName>Actual_Starting_Number_of_Stories__c</fullName>
    <inlineHelpText>The actual number of stories at the beginning of the sprint</inlineHelpText>
    <label>Actual Starting Number of Stories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>