force-app/main/default/objects/Feature_Forecast__c/fields/High_Story_Estimate__c.field-meta.xml
<CustomField>
    <fullName>High_Story_Estimate__c</fullName>
    <inlineHelpText>Maximum number of stories/points for the feature</inlineHelpText>
    <label>High Story Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>