force-app/main/default/objects/Feature_Forecast__c/fields/Low_Story_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Low_Story_Estimate__c</fullName>
    <inlineHelpText>Minimum number of stories/points for the feature</inlineHelpText>
    <label>Low Story Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>