force-app/main/default/objects/Feature_Forecast__c/fields/Number_of_Simulations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Simulations__c</fullName>
    <defaultValue>500</defaultValue>
    <inlineHelpText>Number of simulations used to generate the forecast</inlineHelpText>
    <label>Number of Simulations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>