force-app/main/default/objects/Feature_Forecast__c/fields/Sprint_Days__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Days__c</fullName>
    <inlineHelpText>Number of calendar days in a sprint cycle</inlineHelpText>
    <label>Sprint Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>