force-app/main/default/objects/Feature_Forecast__c/fields/Sprint_Throughput_High__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Throughput_High__c</fullName>
    <inlineHelpText>High estimate for stories/points completed in a sprint</inlineHelpText>
    <label>Sprint Throughput High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>