force-app/main/default/objects/Feature_Forecast__c/fields/Sprint_Throughput_Low__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Throughput_Low__c</fullName>
    <inlineHelpText>Low estimate for number of stories/points completed during a sprint</inlineHelpText>
    <label>Sprint Throughput Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>