force-app/main/default/objects/Feature_Forecast__c/fields/Story_Split_High__c.field-meta.xml
<CustomField>
    <fullName>Story_Split_High__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>High estimate for how much a given story/feature might be split</inlineHelpText>
    <label>Story Split High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>