force-app/main/default/objects/Feature_Forecast__c/fields/Story_Split_Low__c.field-meta.xml
<CustomField>
    <fullName>Story_Split_Low__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Low estimate for how much a story/feature could be split</inlineHelpText>
    <label>Story Split Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>